--- a/nahbah-frontend/src/App.css
+++ b/nahbah-frontend/src/App.css
@@ -5,7 +5,7 @@
 /* Base styles */
 :root {
   --gradient-start: #F9D90B;
-  --gradient-end: #98F90F;
+  --gradient-end: #8ce70d;
 }
 
 body {
@@ -18,15 +18,17 @@ body {
 
 .font-fjalla {
   font-family: 'Fjalla One', sans-serif;
+  font-weight: 400;
 }
 
 .hero-text {
   font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
 }
 
 /* Gradient text */
 .gradient-text {
-  background: radial-gradient(100% 100% at 0% 0%, var(--gradient-start) 0%, var(--gradient-end) 100%);
+  background: radial-gradient(100% 100% at 0% 10%, var(--gradient-start) 0%, var(--gradient-end) 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -34,9 +36,9 @@ body {
 
 /* Gradient line */
 .gradient-line {
-  background: linear-gradient(90deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
-  height: 2px;
-  width: 100%;
+  background: linear-gradient(100deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
+  height: 1px;
+  width: calc(100% + 10rem) ; 
 }
 
 /* Button styles */
@@ -47,7 +49,7 @@ body {
   font-size: 1.25rem;
   color: #fff;
   background: transparent;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   background-image: linear-gradient(#000, #000), 
                     linear-gradient(90deg, var(--gradient-start), var(--gradient-end));
   background-origin: border-box;
@@ -59,20 +61,18 @@ body {
   transform: translateY(-2px);
 }
 
-.white-btn {
+.lime-btn {
   position: relative;
   padding: 0.75rem 2rem;
   font-family: 'Fjalla One', sans-serif;
   font-size: 1.25rem;
-  color: #fff;
-  background: transparent;
-  border: 2px solid #fff;
+  border: 1px solid #8ce70d;
   transition: all 0.3s ease;
 }
 
-.white-btn:hover {
+.lime-btn:hover {
   transform: translateY(-2px);
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(234, 234, 6, 0.114);
 }
 
 /* Navigation styles */
@@ -91,7 +91,7 @@ body {
   bottom: -2px;
   left: 0;
   width: 0;
-  height: 2px;
+  height: 1px;
   background: linear-gradient(90deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
   transition: width 0.3s ease;
 }
