--- a/nahbah-frontend/src/App.css
+++ b/nahbah-frontend/src/App.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Fjalla One', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #000;
+  background-color: #1E1E1E;
   color: #fff;
 }
 
@@ -71,8 +71,8 @@ body {
 }
 
 .lime-btn:hover {
-  transform: translateY(-2px);
-  background: rgba(234, 234, 6, 0.114);
+  transform: translateY(-3px);
+  border: 1px solid #0bf91b;
 }
 
 /* Navigation styles */
