--- a/nahbah-frontend/src/App.css
+++ b/nahbah-frontend/src/App.css
@@ -18,12 +18,10 @@ body {
 
 .font-fjalla {
   font-family: 'Fjalla One', sans-serif;
-  font-weight: 400;
 }
 
 .hero-text {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
 }
 
 /* Gradient text */
@@ -38,7 +36,7 @@ body {
 .gradient-line {
   background: linear-gradient(100deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
   height: 1px;
-  width: calc(100% + 10rem) ; 
+  width: 120% ; 
 }
 
 /* Button styles */
