--- a/nahbah-frontend/src/App.css
+++ b/nahbah-frontend/src/App.css
@@ -8,14 +8,6 @@
 }
 
 @font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: swap;
-  src: url('/fonts/Inter/Inter-VariableFont_opsz\,wght.ttf') format('truetype');
-}
-
-@font-face {
   font-family: 'Inter Static';
   font-style: normal;
   font-weight: 500;
@@ -49,7 +41,7 @@
 
 @font-face {
   font-family: 'Futura Bold';
-  src: url('/fonts/Futura\ Bold/Futura Bold.otf') format('opentype');
+  src: url('/fonts/Futura_Bold/Futura_Bold.otf') format('opentype');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
